# SortingAlgorithmsForVariousDataTypes

./: CMakeLists.txt  README.md
Headers/: CheckIsItSorted.h  GenerateDifferentArrays.h  GenerateDifferentArraysToTest.h  HeapSort.h  InsertionSort.h  Menu.h  QuickSort.h  QuickSortHelper.h  ReadFile.h  SelectDataType.h  SelectSort.h  SelectWriteOrUse.h  ShellSort.h  Sort.h  SortMenu.h  ViewArrays.h
Sources/: CheckIsItSorted.cpp  GenerateDifferentArrays.cpp  GenerateDifferentArraysToTest.cpp  HeapSort.cpp  InsertionSort.cpp  Menu.cpp  QuickSort.cpp  QuickSortHelper.cpp  ReadFile.cpp  SelectDataType.cpp  SelectSort.cpp  SelectWriteOrUse.cpp  ShellSort.cpp  Sort.cpp  SortMenu.cpp  ViewArrays.cpp  main.cpp  test.txt
